Simplify day 4